# lightning-containers

./: .dockerignore  .env  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yml  prefect.yaml  readme.md  requirements.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: docker-image.yml  funding.yml  pipeline.yml
.streamlit/: config.toml  secrets.toml
app/: dashboard.py
data/Load/: glmFlash.db
data/transform/: OR_GLM-L2-LCFA_G18_s20240431900000_e20240431900200_c20240431900213.event.csv.trm  OR_GLM-L2-LCFA_G18_s20240431900200_e20240431900400_c20240431900414.event.csv.trm  OR_GLM-L2-LCFA_G18_s20240431900400_e20240431901000_c20240431901014.event.csv.trm  OR_GLM-L2-LCFA_G18_s20240431901000_e20240431901200_c20240431901217.event.csv.trm  OR_GLM-L2-LCFA_G18_s20240431901200_e20240431901400_c20240431901415.event.csv.trm  OR_GLM-L2-LCFA_G18_s20240431901400_e20240431902000_c20240431902014.event.csv.trm  OR_GLM-L2-LCFA_G18_s20240431902000_e20240431902200_c20240431902216.event.csv.trm  OR_GLM-L2-LCFA_G18_s20240431902200_e20240431902400_c20240431902414.event.csv.trm  OR_GLM-L2-LCFA_G18_s20240431902400_e20240431903000_c20240431903018.event.csv.trm  (+3949 more)
docker/: Dockerfile  docker-compose.yaml
docs/: index.md
lightning_containers/: flows.py
lightning_containers_tests/: test_extract.py  test_load.py
scripts/: setup_db.sh
src/: flows.py
src/models/: __init__.py  (+1 more)
tests/: test_clustering.py  test_connection.py  test_extract.py  test_load.py  test_pipeline.py  test_transform.py
(+28 files in other folders)
