[metadata]
name = lightning_containers
maintainer = Bayo Adejare
maintainer_email = 4624500+BayoAdejare@users.noreply.github.com
description = Lightning weather analysis pipeline starter
author = Bayo Adejare
author_email = 4624500+BayoAdejare@users.noreply.github.com
license = Apache-2.0
long_description = file: README.md